--- a/assets/styles/breakpoints.css
+++ b/assets/styles/breakpoints.css
@@ -13,4 +13,11 @@
 }
 
 @media (max-width: 575px) {
+    .video__button{
+        width: 40px;
+        height: 40px;
+    }
+    .video__button-icon{
+        font-size: 1.5rem;
+    }
 }
