--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -390,6 +390,11 @@ a {
     font-size: 2rem;
 }
 
+/* ==================== VIDEO PLAYER | Omonjon ==================== */
+.footer-linkBg{
+    background: rgba(255, 255, 255, 0.05);
+    padding: 12px;
+}
 
 /*=============== SCROLL BAR | Omonjon ===============*/
 ::-webkit-scrollbar {
@@ -399,12 +404,12 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #1B9CAA;
+    background-color: var(--bs-primary);
     border-radius: .5rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--bs-primary);
+    background-color: var(--bs-secondary);
 }
 
 /*=============== SCROLL UP | Omonjon ===============*/
