--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -19,6 +19,10 @@ body {
     background-color: #fafafa;
 }
 
+.line-h-initial {
+    line-height: initial;
+}
+
 .primary-radius {
     border-radius: var(--primary-radius) !important;
 }
@@ -32,33 +36,6 @@ body {
     user-select: none;
     pointer-events: none;
     cursor: default;
-}
-
-.w-26 {
-    width: 26%;
-}
-
-.w-35px {
-    width: 35px;
-}
-
-.w-56px {
-    width: 56px;
-}
-
-.h-35px {
-    height: 35px;
-}
-
-.form-check-input:checked {
-    background-color: var(--bs-primary);
-    border-color: var(--bs-primary);
-}
-
-.form-check-input:focus {
-    border-color: var(--bs-primary);
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, .25);
 }
 
 .h1,
@@ -317,7 +294,7 @@ a {
 }
 
 .header .swiper-button-prev {
-    left: 94% !important;
+    left: 92.7% !important;
 }
 
 .header .swiper-pagination-bullet.swiper-pagination-bullet-active {
@@ -325,14 +302,6 @@ a {
 }
 
 /* ==================== CALCULATOR SECTION | Omonjon ==================== */
-.calculator-box {
-    max-width: 1080px;
-    width: 100%;
-    border-radius: 20px;
-    background: var(--bs-white);
-    box-shadow: -7px 21px 96px 0px rgba(35, 33, 75, 0.13);
-}
-
 .nav-tabs .nav-link {
     padding: 8px 16px;
     background-color: #0A0A0A08;
@@ -357,44 +326,32 @@ a {
     stroke: var(--bs-primary);
 }
 
-/* ==================== CALCULATOR SECTION | Omonjon ==================== */
-.line-position {
-    right: -150px;
-    top: 25px;
+.calculator-section .pay-amount {
+    padding: 8px 10px;
 }
 
-/* ==================== VIDEO PLAYER | Omonjon ==================== */
-.video__button {
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto auto;
-    width: 70px;
-    height: 70px;
-    border-radius: 50% !important;
+.calculator-section .box-calc {
+    min-width: 380px;
+    max-width: 381px;
 }
 
-.play-self {
-    bottom: -20px;
-    right: 20px;
-    margin: auto 40px 0 auto;
+.calculator-section ::-webkit-scrollbar {
+    background-color: transparent;
 }
 
-.video__content {
-    position: relative;
+/*=============== APP SECTION | Omonjon ===============*/
+.app-section .app-box {
+    max-width: 744px;
+    width: 100%;
+    border: 1px solid #00A0701A;
+    column-gap: 32px;
+    background-color: #EDF6F3;
 }
 
-.video__button-icon {
-    color: var(--bs-secondary);
-    font-size: 2rem;
-}
-
-/* ==================== VIDEO PLAYER | Omonjon ==================== */
-.footer-linkBg {
-    background: rgba(255, 255, 255, 0.05);
-    padding: 12px;
+/*=============== ABOUT SECTION | Omonjon ===============*/
+.about-section .about-icons {
+    width: 48px;
+    height: 48px;
 }
 
 /*=============== SCROLL BAR | Omonjon ===============*/
