--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -213,6 +213,11 @@ button {
     border: 0;
 }
 
+.container-mini {
+    max-width: 744px;
+    width: 100%;
+}
+
 .dropdown-arrow::after {
     border-bottom: 2px solid #999;
     border-right: 2px solid #999;
@@ -368,13 +373,18 @@ a {
     background-color: transparent;
 }
 
+.car-num {
+    width: 200px;
+}
+
 .tech-pas {
     position: relative;
+    width: 64px;
 }
 
 .tech-pas label {
     position: absolute;
-    left: 12px;
+    left: 4px;
     white-space: nowrap;
 }
 
@@ -382,17 +392,42 @@ a {
     margin-top: 30px;
 }
 
+.tech-pas-num {
+    width: 158px;
+}
+
+.ins-type {
+    width: 196px;
+}
+
+.calc-btn button {
+    padding: 8px 12px !important;
+}
+
 .form-control,
 .form-select {
     border: 1px solid #EFEFEF;
     box-shadow: 0 4px 8px 0 #00000008;
     border-radius: 12px;
+    padding: 8px 12px !important;
 }
 
 .form-control::placeholder {
     color: #A3A3A3;
     font-size: 16px;
     line-height: 24px;
+}
+
+.calc-result {
+    padding: 8px 16px;
+    box-shadow: 0 4px 8px 0 #00000008;
+    border: 1px solid #EFEFEF;
+}
+
+.calc-result-img {
+    max-width: 160px;
+    width: 100%;
+    height: 48px;
 }
 
 /*=============== APP SECTION | Omonjon ===============*/
@@ -411,12 +446,7 @@ a {
 }
 
 /*=============== PARTNERS SECTION | Omonjon ===============*/
-.partners-box {
-    max-width: 744px;
-    width: 100%;
-}
-
-.partners-box .swiper-slide {
+.container-mini .swiper-slide {
     height: 48px;
 }
 
