--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -27,6 +27,23 @@ body {
     border-radius: var(--primary-radius) !important;
 }
 
+.py-12px {
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+.pb-12px {
+    padding-bottom: 12px;
+}
+
+.pt-12px {
+    padding-top: 12px;
+}
+
+.primary-border {
+    border: 1px solid #EFEFEF
+}
+
 .no-select {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -113,6 +130,20 @@ button[aria-expanded^="true"] i {
     border: 1px solid #EFEFEF !important;
     background: white;
     color: black;
+}
+
+.disabled {
+    color: #A3A3A3 !important;
+    background-color: #0A0A0A08 !important;
+    opacity: 1 !important;
+    border-color: #DDDDDD !important
+}
+
+.btn.disabled {
+    color: #A3A3A3;
+    background-color: #0A0A0A08;
+    opacity: 1;
+    border-color: #DDDDDD
 }
 
 .border-end-dashed {
@@ -266,9 +297,9 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-/* .form-select{
-    --bs-form-select-bg-img: none;
-} */
+.form-select {
+    --bs-form-select-bg-img: url(../images/svg/top-bottom-arrow.svg);
+}
 
 li,
 ul,
@@ -372,12 +403,6 @@ input:checked ~ .checkbox-child {
     border-color: var(--bs-primary);
     background-color: var(--bs-primary);
 }
-
-/*input:checked~.checkbox-child:has(> .services-box) {*/
-/*    border: 1px solid var(--bs-primary);*/
-/*    background-color: white;*/
-/*    box-shadow: 0 0 0 0.25rem rgba(0, 160, 112, .25);*/
-/*}*/
 
 .services-box.active {
     border: 1px solid var(--bs-primary);
