--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -27,6 +27,15 @@ body {
     border-radius: var(--primary-radius) !important;
 }
 
+label {
+    cursor: pointer;
+}
+
+.px-20px {
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
 .py-12px {
     padding-top: 12px;
     padding-bottom: 12px;
@@ -93,7 +102,7 @@ button[aria-expanded^="true"] i {
 }
 
 .primary-shadow {
-    box-shadow: 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06);
+    box-shadow: 0 4px 8px 0 #00000008;
 }
 
 .h-72px {
@@ -133,6 +142,7 @@ button[aria-expanded^="true"] i {
 .btn-white {
     border: 1px solid #EFEFEF !important;
     background: white;
+    box-shadow: 0 4px 8px 0 #00000008;
     color: black;
 }
 
@@ -251,6 +261,8 @@ button {
 .container-mini {
     max-width: 744px;
     width: 100%;
+    margin: 0 auto;
+    padding: 0 12px;
 }
 
 .dropdown-arrow::after {
@@ -386,6 +398,148 @@ a {
     border: 1px solid transparent;
 }
 
+.form-label {
+    margin-left: 6px;
+}
+
+input[readonly] {
+    color: #A3A3A3 !important;
+    background: #0A0A0A08;
+    border: 1px solid #DDDDDD;
+}
+
+.checkbox-label {
+    position: relative;
+    padding-left: 30px;
+}
+
+.checkbox-label::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background-color: #FFFFFF;
+    border: 1px solid #EFEFEF;
+    transition: var(--primary-transition);
+    border-radius: 8px;
+}
+
+input:checked ~ .checkbox-label:after {
+    border-color: var(--bs-primary);
+    background-color: var(--bs-primary);
+}
+
+/* Checkmark */
+.checkbox-label::before {
+    content: "";
+    position: absolute;
+    display: none;
+    left: 7.5px;
+    top: 3px;
+    width: 5px;
+    height: 11px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    z-index: 1;
+    transition: var(--primary-transition);
+}
+
+/* Display checkmark when checked */
+input:checked ~ .checkbox-label::before {
+    display: block;
+}
+
+input[readonly]:focus {
+    box-shadow: none;
+    border-color: #DDDDDD;
+    background-color: #0A0A0A08;
+}
+
+input[type=radio] {
+    -webkit-appearance: none; /* Remove default checkbox style on Safari */
+    -moz-appearance: none; /* Remove default checkbox style on Firefox */
+    appearance: none; /* Remove default checkbox style on other browsers */
+}
+
+.radio-label {
+    padding-left: 30px;
+    position: relative;
+}
+
+.radio-label::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #EFEFEF;
+    background: var(--bs-white);
+    box-shadow: 0 1px 1px 0 #00000008;
+    transition: var(--primary-transition);
+}
+
+.radio-label::before {
+    content: '';
+    display: none;
+    position: absolute;
+    left: 0;
+    width: 8px;
+    height: 8px;
+    border: 6px solid white;
+    border-radius: 50%;
+    transition: var(--primary-transition);
+}
+
+input[type=radio]:checked ~ .radio-label:after {
+    background: var(--bs-primary);
+    box-shadow: none;
+}
+
+input[type=radio]:checked ~ .radio-label:before {
+    display: block;
+    top: 6px;
+    left: 6px;
+    border: 4px solid var(--bs-white);
+    z-index: 2;
+}
+
+input[type=date] {
+    padding: 8px 40px !important;
+    position: relative;
+
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        top: 10px;
+    }
+
+    &::after {
+        left: 12px;
+        background: url("../images/svg/calendar.svg") no-repeat center/contain;
+    }
+
+    &::before {
+        top: 12px;
+        width: 16px;
+        height: 16px;
+        right: 12px;
+        background: url("../images/svg/top-bottom-arrow.svg") no-repeat center/contain;
+    }
+}
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
+
 input[type=checkbox] {
     -webkit-appearance: none; /* Remove default checkbox style on Safari */
     -moz-appearance: none; /* Remove default checkbox style on Firefox */
@@ -404,12 +558,12 @@ input[type=checkbox] {
     transition: var(--primary-transition);
 }
 
-input:checked ~ .checkbox-child {
+input[type=checkbox]:checked ~ .checkbox-child {
     border-color: var(--bs-primary);
     background-color: var(--bs-primary);
 }
 
-.services-box.active {
+.services-box:has(:checked) {
     border: 1px solid var(--bs-primary);
     background-color: white;
     box-shadow: 0 0 0 0.25rem rgba(0, 160, 112, .25);
@@ -431,7 +585,7 @@ input:checked ~ .checkbox-child {
 }
 
 /* Display checkmark when checked */
-input:checked ~ .checkbox-child::after {
+input[type=checkbox]:checked ~ .checkbox-child::after {
     display: block;
 }
 
@@ -439,6 +593,7 @@ input:checked ~ .checkbox-child::after {
     border: 1px solid #DC30551A;
     background-color: #DC30550D;
     min-height: 400px;
+    transition: var(--primary-transition);
 }
 
 .services-box:hover {
@@ -478,7 +633,8 @@ input:checked ~ .checkbox-child::after {
 
 .tech-pas {
     position: relative;
-    width: 64px;
+    max-width: 64px;
+    width: 100%;
 }
 
 .tech-pas label {
@@ -610,4 +766,12 @@ input[type='radio'] {
 /* Show Scroll Up*/
 .show-scroll {
     bottom: 4rem;
+}
+
+/* Emergency page */
+.emergency-section {
+    min-height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
